# beambusters

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
api/: index.html
beambusters/: algorithms.py  batch_center.sh  batch_center_regae.sh  batch_indexing.sh  batch_indexing_det_refine.sh  batch_indexing_shift.sh  batch_write_peaks.sh  center_data.py  config.yaml  config_backup.yaml  config_regae.yaml  main.py  main_1.py  settings.py  turbo_batch_center.sh  utils.py  write_peak_list_for_indexing.py
doc/: config.md  config.yaml  config_electrons.yaml  config_regae.yaml  config_verbose.yaml  requirements.txt
docs/: api.md  index.md
docs/example/: config.md  config.yaml  config_electrons.yaml  config_test.yaml
docs/reference/: algorithms.md  contact.md  index.md  install.md  main.md  settings.md  usage.md  utils.md
example/config/: index.html
reference/: index.html
reference/algorithms/: index.html
reference/contact/: index.html
reference/main/: index.html
reference/settings/: index.html
reference/usage/: index.html
reference/utils/: index.html
search/: search_index.json
site/: 404.html  index.html
site/api/: index.html
site/example/: config_electrons.yaml
site/example/config/: index.html
site/reference/: index.html
site/reference/algorithms/: index.html
site/reference/contact/: index.html
site/reference/main/: index.html
site/search/: search_index.json
tests/: .coverage  test_algorithms.py
tests/example/: simple.geom
(+3 files in other folders)
